dev journal entries, backpack placeholder, marble has 8x directional rolling
-renamed demo videos
-updated website with journal content.
-changed game UI to include KeyChain and Backpack
-marble rolls in 8 directions
-added about page

--- a/publicHTML/styles.css
+++ b/publicHTML/styles.css
@@ -1,4 +1,7 @@
 
+html {
+
+}
 
 header {
     font-style: Cambria, serif;
@@ -45,5 +48,16 @@ aside {
     float: right;
     margin: 16px;
     padding: 8px;
+    display: block;
+}
+
+.example {
+    margin: 0px auto;
+    font-weight: bold;
+}
+
+article img {
+    border: 1px black solid;
+    margin: 8px auto;
     display: block;
 }
